2011-05-13  Stefano Lattarini  <stefano.lattarini@gmail.com>

	lex tests: remove erroneous check about ylwrap distribution
	* tests/lex5.test: Do not check that the ylwrap script is *not*
	distributed when there is only one lexer, as ylwrap is in fact
	expected to distributed unconditionally (at least starting from
	commit `Release-1-9-323-gc5881cc' of 19-08-2006).  Note that this
	bogus check wasn't triggering any failure because it was done at
	the wrong time (i.e. from the VPATH build directory), so that it
	could never fail anyway.
	Instead, check that ylwrap is distributed even when there is only
	one lexer.
	Since we are at it, add a couple of `ls -l' calls, to get better
	debugging info.

2011-05-13  Stefano Lattarini  <stefano.lattarini@gmail.com>

	yacc tests: "make clean" removes C++ files from non-distributed .y
	* tests/yacc-clean-cxx.test: New test, sister of `yacc-clean.test'.
	* tests/yacc-clean.test: Update heading comment to reference the
	new sister test.
	* tests/Makefile.am (TESTS): Update.

2011-05-06  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: add a workaround for automake bug#8485
	* tests/yacc-d-cxx.test (Makefile.am): Add temporary workaround
	for automake bug#8485.  The bug is still exposed by the testcase
	'yacc-dist-nobuild-subdir.test'.

2011-05-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests: add a couple of inter-tests reference
	* tests/yacc-nodist.test, tests/pr204.test: These tests are
	related, so add references to each other in heading comments.

2011-05-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	lex tests: require just `lex' instead of `flex'
	* tests/lex-subobj-nodep.test ($required): Require `lex',
	not `flex', as this test is expected to work with any lex
	implementation.
	* tests/silent-lex.test: Likewise.

2011-05-04  Stefano Lattarini  <stefano.lattarini@gmail.com>

	tests defs: use `skip_' for skipping yacc/lex related tests