@@ -1,5 +1,14 @@
 2011-05-13  Stefano Lattarini  <stefano.lattarini@gmail.com>
 
+	lex tests: make test on Lex dependency tracking more "semantic"
+	* tests/lex4.test: Renamed ...
+	* tests/lex-depend-grep.test: ... to this, and extended.
+	* tests/lex-depend.test, tests/lex-depend-cxx.test: ... these
+	new tests.
+	* tests/Makefile.am (TESTS): Update.
+
+2011-05-13  Stefano Lattarini  <stefano.lattarini@gmail.com>
+
 	lex tests: remove erroneous check about ylwrap distribution
 	* tests/lex5.test: Do not check that the ylwrap script is *not*
 	distributed when there is only one lexer, as ylwrap is in fact
